--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "firebase": "^7.2.1",
     "firestore": "^1.1.6",
     "http": "0.0.0",
-    "rxjs": "~6.5.1",
+    "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
